[metadata]
name = cityviz
version = 0.1.0
author = Shi Johnson-Bey
author_email = shijbey@gmail.com
description = Vizualizer and inspection tool for Talk of the Town
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/CityVizGame
project_urls =
    Bug Tracker = https://github.com/ShiJbey/CityVizGame/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cityviz
packages = find:
python_requires = >=3.6
install_requires =
    pygame
    pygame_gui

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src
